force-app/main/default/objects/BrillioFC__Inactive_Process_Builder__c/BrillioFC__Inactive_Process_Builder__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Inactive Process Builder</label>
    <nameField>
        <label>Inactive Process Builder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inactive Process Builders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>