force-app/main/default/objects/BrillioFC__Inactive_Process_Builder__c/fields/BrillioFC__External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__External_Record_Id__c</fullName>
    <label>External Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>