force-app/main/default/objects/BrillioFC__Inactive_Process_Builder__c/fields/BrillioFC__Status__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>