force-app/main/default/objects/BrillioFC__Inactive_Process_Builder__c/fields/BrillioFC__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>